Image is now sending to the backend. Also cleaned up some bugs with the image cropping

--- a/client/src/componenets/UserProfile/userProfileStyle.css
+++ b/client/src/componenets/UserProfile/userProfileStyle.css
@@ -117,6 +117,14 @@
     width: 125px;
 }
 
+.notificationHeader {
+    text-align: center;
+    font-size: 26px;
+    font-weight: 600;
+    margin-bottom: 25px;
+    height: 40px;
+}
+
 @-webkit-keyframes pop-in {
     0% { opacity: 0; -webkit-transform: scale(0.5); }
     100% { opacity: 1; -webkit-transform: scale(1); }
